@@ -10,6 +10,8 @@
 	* src/seahorse-keyserver-results.glade:
 	* src/seahorse-keyserver-results.ui: Use a GtkUIManager based 
 	UI for menus and toolars.
+	* libseahorse/seahorse-prefs-cache.c: Fix problem with controls
+	not being set to initial state. See bug #304566
 	
 2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>
 
